--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -1,4 +1,4 @@
-name: Deploy React App to Azure Web App
+name: Deploy React App with Vite to Azure
 
 on:
   push:
@@ -27,20 +27,17 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Build React app
+      - name: Build Vite app
         run: npm run build
 
-      - name: Verificar carpeta build
-        run: |
-          echo "Contenido de la carpeta build:"
-          ls -la build
-
+      - name: List dist contents
+        run: ls -la dist
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: react-build
-          path: build
+          name: vite-dist
+          path: dist
 
   deploy:
     runs-on: ubuntu-latest
@@ -53,7 +50,7 @@ jobs:
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
-          name: react-build
+          name: vite-dist
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
