--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "node server.js"
   },
   "dependencies": {
     "@azure/msal-browser": "^4.4.0",
@@ -19,6 +20,7 @@
     "axios": "^1.8.2",
     "bootstrap": "^5.3.3",
     "clsx": "^2.1.1",
+    "express": "^5.1.0",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^18.0.0",
