--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -1,4 +1,4 @@
-name: Deploy React App with Vite to Azure
+name: Deploy Vite React App to Azure Web App
 
 on:
   push:
@@ -13,10 +13,11 @@ permissions:
   contents: read
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
@@ -30,33 +31,15 @@ jobs:
       - name: Build Vite app
         run: npm run build
 
-      - name: List dist contents
-        run: ls -la dist
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: vite-dist
-          path: dist
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Development'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
-    steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: vite-dist
+      - name: Move build output to root
+        run: |
+          rm -rf node_modules
+          mv dist/* .
+          rm -rf dist
 
       - name: Deploy to Azure Web App
-        id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
           app-name: ${{ env.AZURE_WEBAPP_NAME }}
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: vite-dist
-
+          package: .
